[tool.poetry]
name = "upoly"
version = "0.1.13"
description = "High performance asyncio REST client for polygon.io"
authors = ["Riley <rileymshea@gmail.com>"]
license = "AGPL"
readme = "README.md"
keywords = ["asyncio", "polygon", "polygonio", "python", "client-python", "http2"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^1.0.0"
python-dotenv = "^0.15.0"
httpx = { extras = ["http2", "brotli"], version = "^0.16.1" }
uvloop = "^0.14.0"
orjson = "^3.4.6"
pandas = "^1.2.0"
numpy = "^1.19.5"
nest-asyncio = "^1.4.3"
pandas-market-calendars = "^1.6.1"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.3"
black = "^20.8b1"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
isort = "^5.7.0"
rope = "^0.18.0"
coverage = "^5.3.1"
respx = "^0.16.3"
mypy = "^0.790"
pytest-watch = "^4.2.0"
radon = "^4.3.2"
pytest-cov = "^2.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
