[tool.poetry]
name = "upoly"
version = "0.1.22"
description = "High performance asyncio REST client for polygon.io"
authors = ["Riley <rileymshea@gmail.com>"]
license = "AGPL"
readme = "README.md"
keywords = ["asyncio", "polygon", "polygonio", "python", "client-python", "http2"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
joblib = "^1.0.0"
python-dotenv = "^0.15.0"
httpx = { extras = ["http2", "brotli"], version = "^0.16.1" }
uvloop = "^0.14.0"
orjson = "^3.4.6"
pandas = "^1.2.0"
numpy = "^1.19.5"
nest-asyncio = "^1.4.3"
pandas-market-calendars = "^1.6.1"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.3"
black = "^20.8b1"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
isort = "^5.7.0"
rope = "^0.18.0"
coverage = "^5.3.1"
respx = "^0.16.3"
mypy = "^0.800"
pytest-watch = "^4.2.0"
radon = "^4.3.2"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.5.1"
cytoolz = "^0.11.0"
pyarrow = "^2.0.0"
matplotlib = "^3.3.3"
fsspec = "^0.8.5"
s3fs = "^0.5.2"
numba = "^0.52.0"
dask = "^2021.1.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.5"
dask-labextension = "^5.0.0"
jupyterlab-lsp = "^3.2.0"
python-language-server = {extras = ["all"], version = "^0.36.2"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
